--- a/index.html
+++ b/index.html
@@ -2,20 +2,68 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Faisal Kabir - Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Faisal Kabir | Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>Faisal Kabir</h1>
-    <p>Electrical & Software Engineering Student | Embedded Systems | Hardware Design | AI Projects</p>
+    <div class="container">
+      <h1>Faisal Kabir</h1>
+      <p>Electrical & Software Engineering | Embedded Systems | AI | Hardware Innovator</p>
+    </div>
   </header>
-  <section class="projects">
-    <div class="project-card">
-      <h2>Touchless FPGA Maze Game</h2>
-      <p>Maze game using IR gesture control + servo-based tilt, built on DE10-Lite FPGA.</p>
-      <a href="projects/fpga-maze.html">View Project</a>
+
+  <nav>
+    <div class="container">
+      <a href="#projects">Projects</a>
+      <a href="#resume">Resume</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </nav>
+
+  <section class="hero">
+    <div class="container">
+      <h2>Welcome to My Engineering Portfolio</h2>
+      <p>A collection of my technical projects, hardware builds, and innovation stories.</p>
     </div>
   </section>
+
+  <section id="projects" class="projects">
+    <div class="container">
+      <h2>Projects</h2>
+      <div class="project-grid">
+        <div class="project-card">
+          <h3>Touchless FPGA Maze Game</h3>
+          <video controls src="projects/fpga-maze-demo.mp4"></video>
+          <p>Built a real-time maze system on a DE10-Lite FPGA using IR sensors and servo motors. Controlled entirely via hand gestures. Includes timer, score system, and dual-axis tilt using Verilog.</p>
+          <a href="projects/fpga-maze-report.docx" class="button">Download Report</a>
+        </div>
+        <!-- More project cards to be added here -->
+      </div>
+    </div>
+  </section>
+
+  <section id="resume" class="resume">
+    <div class="container">
+      <h2>Resume</h2>
+      <p><a href="FaisalKabir_Resume.pdf" class="button">Download PDF Resume</a></p>
+    </div>
+  </section>
+
+  <section id="contact" class="contact">
+    <div class="container">
+      <h2>Contact Me</h2>
+      <p>Email: faisalkabir123@hotmail.com</p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/faisalkabir123" target="_blank">linkedin.com/in/faisalkabir123</a></p>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 Faisal Kabir. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
