--- a/index.html
+++ b/index.html
@@ -1,30 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Faisal Kabir | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&display=swap" rel="stylesheet">
-</head>
-<body>
-  <main class="container">
-    <h1>Faisal Kabir</h1>
-    <p class="subtitle">Electrical & Software Engineer | Embedded Systems | Hardware & AI Innovator</p>
-    <a href="FaisalKabir_Resume.pdf" class="resume-link" download>Download Resume (PDF)</a>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+</head><body>
+    <div class="container">
+        <header>
+            <h1>Your Name</h1>
+            <p>A collection of my projects and work. I am passionate about [Your Passion] and currently seeking a co-op position in [Your Field].</p>
+        </header>
 
-    <section class="project">
-      <h2>Touchless FPGA Maze Game</h2>
-      <p class="description">
-        Designed a real-time interactive maze game controlled entirely by hand gestures. Built on the DE10-Lite FPGA board, this project uses IR sensors to detect directional input and servo motors for dual-axis tilt. Integrated a timer and score-saving system with HEX display output. Written entirely in Verilog and implemented with physical motion components.
-      </p>
-      <div class="tags">
-        <a href="projects/fpga-maze-report.docx" class="tag">Report</a>
-        <a href="projects/fpga-maze-demo.mp4" class="tag">Video</a>
-      </div>
-    </section>
+        <main class="portfolio-grid">
+            <section class="year-section">
+                <h2>2024</h2>
+                <div class="project-card">
+                    <img src="https://placehold.co/600x400" alt="Project Screenshot">
+                    <h3>Project Title 1</h3>
+                    <p>A brief description of your project. Mention the technologies used and what you learned.</p>
+                    <div class="project-links">
+                        <a href="#">Live Demo</a>
+                        <a href="#">Source Code</a>
+                        <a href="path/to/your/document.pdf" target="_blank">PDF Report</a>
+                    </div>
+                </div>
+                 <div class="project-card">
+                    <video controls width="100%">
+                        <source src="path/to/your/video.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <h3>Project Title 2</h3>
+                    <p>A brief description of your project. This one features a video.</p>
+                    <div class="project-links">
+                        <a href="#">Live Demo</a>
+                        <a href="#">Source Code</a>
+                    </div>
+                </div>
+            </section>
 
-    <!-- Add more projects below as needed -->
-  </main>
+            <section class="year-section">
+                <h2>2023</h2>
+                <div class="project-card">
+                    <img src="https://placehold.co/600x400" alt="Project Screenshot">
+                    <h3>Project Title 3</h3>
+                    <p>A brief description of your project. Mention the technologies used and what you learned.</p>
+                    <div class="project-links">
+                        <a href="#">Live Demo</a>
+                        <a href="#">Source Code</a>
+                    </div>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <p>Contact me at <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+        </footer>
+    </div>
 </body>
-</html>
+</html> 
